# VEDA_Qt_Practice

./: CMakeLists.txt  README.md  assets.qrc  enemy.cpp  enemy.h  explosion.cpp  gamewidget.cpp  gamewidget.h  level.json  levelmanager.cpp  levelmanager.h  main.cpp  player.cpp  player.h
include/: explosion.h
include/UI/: loginwidget.h  mainmenuwidget.h  mypagewidget.h  rankingwidget.h  signupwidget.h  widget.h
include/game/: cannon.h  gamewidget.h  item.h  levelmanager.h
src/: cannon.cpp  explosion.cpp  item.cpp  levelmanager.cpp  main.cpp
src/UI/: loginwidget.cpp  mainmenuwidget.cpp  mypagewidget.cpp  rankingwidget.cpp  signupwidget.cpp  widget.cpp
src/game/: cannon.cpp  enemy.cpp  explosion.cpp  gamewidget.cpp  item.cpp  levelmanager.cpp  player.cpp
